--- a/example/ios/Sharing Extension/Info.plist
+++ b/example/ios/Sharing Extension/Info.plist
@@ -34,7 +34,7 @@
                 <key>NSExtensionActivationSupportsText</key>
                 <true/>
 				<key>NSExtensionActivationSupportsWebURLWithMaxCount</key>
-				<string>1</string>
+				<integer>1</integer>
 				<key>NSExtensionActivationSupportsImageWithMaxCount</key>
 				<integer>100</integer>
                 <key>NSExtensionActivationSupportsMovieWithMaxCount</key>
